# notitle

./: .gitignore  README.md  pyproject.toml
backends/: README.md  pyproject.toml
backends/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backends/accounts/migrations/: 0001_initial.py  0002_remove_user_nickname_user_created_at_and_more.py  0003_alter_useractivity_unique_together.py  0004_delete_useractivity.py  0005_useractivity.py  0006_remove_profile_disliked_categories_and_more.py  0007_alter_profile_disliked_categories.py
backends/backend/: settings.py  urls.py
backends/boards/: serializers.py  urls.py
backends/boards/migrations/: 0001_initial.py
backends/chatbot/: urls.py  views.py
backends/news/: admin.py  models.py  serializers.py  urls.py  views.py
backends/news/migrations/: 0001_initial.py  0002_alter_news_sentiment_score.py  0003_mediacompany_company_id.py  0004_news_article_id_news_url.py  0005_rename_news_title_news_title.py  0006_rename_name_mediacompany_comapany_name.py  0007_remove_news_id_alter_news_article_id.py  0008_rename_comapany_name_mediacompany_company_name.py  0009_remove_mediacompany_id_alter_mediacompany_company_id.py  0010_news_keyword.py
backends/news/services/: news_article_crawler.py  news_company_crawler.py  news_table_delete.py  spark_processor.py
backends/recommends/: admin.py  models.py  urls.py  views.py
backends/recommends/migrations/: 0001_initial.py
frontends/: package-lock.json  package.json
frontends/src/: App.vue  main.js
frontends/src/router/: index.js
frontends/src/stores/: news.js  (+2 more)
(+7 files in other folders)
