[tool.poetry]
name = "final-pjt"
version = "0.1.0"
description = ""
authors = ["JAEHWAN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.16"
djangorestframework = "^3.15.2"
dj-rest-auth = "^7.0.0"
django-allauth = "^65.2.0"
requests = "^2.32.3"
psycopg = "^3.2.3"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.6.0"
tzdata = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
